[tool.poetry]
name = "fuse-tool"
version = "3.1.2"
description = "Customizable wordlist generator with advanced pattern."
authors = ["Ryan R. <pwnfo@proton.me>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "fuse" }]

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.scripts]
fuse = "fuse.cli:main"

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.0"
black = "^26.3.1"
pre-commit = "^4.5.1"

[tool.poetry.group.docs.dependencies]
sphinx = "<9"
furo = "^2025.12.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
   \.git
  | env
  | build
  | dist
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
